--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,2 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" routerLink="">USN France</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-link" routerLink="/users">Users</a>
-      <a class="nav-link" routerLink="/companies">Companies</a>
-    </div>
-  </div>
-</nav>
-
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
