--- a/src/app/components/admin/admin-users/admin-users.component.html
+++ b/src/app/components/admin/admin-users/admin-users.component.html
@@ -15,7 +15,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let user of this.users">
-        <td>{{ user.userId }}</td>
+        <td>{{ user.id }}</td>
         <td>{{ user.firstName }}</td>
         <td>{{ user.lastName }}</td>
         <td>{{ user.email }}</td>
@@ -24,8 +24,8 @@
         <td>
           <button
             type="button"
-            class="btn btn-sm btn-info"
-            routerLink="/userdetails/{{ user.userId }}"
+            class="btn btn-sm btn-outline-info"
+            routerLink="/userdetails/{{ user.id }}"
           >
             View
           </button>
@@ -33,7 +33,7 @@
         <td>
           <button
             type="button"
-            class="btn btn-sm btn-danger"
+            class="btn btn-sm btn-outline-danger"
             (click)="deleteUser(user)"
           >
             Delete
@@ -43,7 +43,11 @@
     </tbody>
   </table>
   <div class="btn-toolbar row px-0 justify-content-md-center">
-    <button type="button" class="btn btn-success" routerLink="/userdetails">
+    <button
+      type="button"
+      class="btn btn-outline-success"
+      routerLink="/userdetails"
+    >
       Create New User
     </button>
   </div>
