--- a/src/app/components/admin/company-details/company-details.component.html
+++ b/src/app/components/admin/company-details/company-details.component.html
@@ -1,91 +1,175 @@
-<div *ngIf="this.company" class="col-10 mx-auto">
-  <div *ngIf="!this.newCompany" class="row px-0">
-    <label for="companyId" class="col-4">ID : </label>
-    <p class="col-8">{{ company.companyId }}</p>
+<ng-container *ngIf="this.company" class="col-10 mx-auto">
+  <div class="form mb-4">
+    <div *ngIf="!this.newCompany" class="row px-0">
+      <label for="companyId" class="col-4">ID : </label>
+      <div class="col-8 form-control">{{ company.id }}</div>
+    </div>
+    <div class="row px-0">
+      <label for="reference" class="col-4">Reference : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.reference"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="name" class="col-4">Name : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.name"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="owner" class="col-4">Owner : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.owner"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="telephone" class="col-4">Telephone : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.telephone"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="website" class="col-4">Website : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.website"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="contactName" class="col-4">Contact Name : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.contactName"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="contactTelephone" class="col-4">Contact Telephone : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.contactTelephone"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="contactEmail" class="col-4">Contact Email : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.contactEmail"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="callLast" class="col-4">Last Called : </label>
+      <input
+        type="date"
+        class="col-8 form-control"
+        [ngModel]="company.callLast | date: 'yyyy-MM-dd'"
+        (ngModelChange)="company.callLast = $event"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="visitLast" class="col-4">Last Visited : </label>
+      <input
+        type="date"
+        class="col-8 form-control"
+        [ngModel]="company.visitLast | date: 'yyyy-MM-dd'"
+        (ngModelChange)="company.visitLast = $event"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="messages" class="col-4">Notes : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.messages"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="discount" class="col-4">Discount : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.discount"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="salesExp" class="col-4">Sales Expected : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.salesExp"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="sales3m" class="col-4">Sales Last 3 Months : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.sales3m"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="salesTotal" class="col-4">Sales Total : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="company.salesTotal"
+      />
+    </div>
   </div>
-  <div class="row px-0">
-    <label for="reference" class="col-4">Reference : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.reference" />
+
+  <div class="row px-0 justify-content-md-center">
+    <button
+      *ngIf="showAddress == false"
+      type="button"
+      class="btn btn-outline-info mx-auto"
+      (click)="showAddress = true"
+    >
+      {{ this.company?.address ? "Edit Address" : "Add Address" }}
+    </button>
+    <button
+      *ngIf="showUsers == false && isCurrentUserManager"
+      type="button"
+      class="btn btn-outline-info mx-auto"
+      (click)="showUsers = true"
+    >
+      Manage Users
+    </button>
   </div>
-  <div class="row px-0">
-    <label for="name" class="col-4">Name : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.name" />
+  <div *ngIf="showAddress">
+    <app-address-details
+      class="row px-0"
+      [userOrCompany]="this.company"
+      (showAddress)="receiveAddressMessage($event)"
+    ></app-address-details>
   </div>
-  <div class="row px-0">
-    <label for="owner" class="col-4">Owner : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.owner" />
+  <div *ngIf="showUsers">
+    <app-company-users
+      class="row px-0"
+      [company]="this.company"
+      (showUsers)="receiveUserMessage($event)"
+    ></app-company-users>
   </div>
-  <div class="row px-0">
-    <label for="telephone" class="col-4">Telephone : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.telephone" />
+  <div class="btn-toolbar row px-0 justify-content-md-center mt-3 mb-3">
+    <button
+      type="button"
+      class="btn btn-outline-success mr-1"
+      (click)="this.newCompany ? createCompany() : updateCompany()"
+    >
+      Save
+    </button>
+    <button type="button" class="btn btn-outline-secondary" (click)="goBack()">
+      Go Back
+    </button>
   </div>
-  <div class="row px-0">
-    <label for="website" class="col-4">Website : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.website" />
-  </div>
-  <div class="row px-0">
-    <label for="contactName" class="col-4">Contact Name : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.contactName" />
-  </div>
-  <div class="row px-0">
-    <label for="contactTelephone" class="col-4">Contact Telephone : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.contactTelephone" />
-  </div>
-  <div class="row px-0">
-    <label for="contactEmail" class="col-4">Contact Email : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.contactEmail" />
-  </div>
-  <div class="row px-0">
-    <label for="callLast" class="col-4">Last Called : </label>
-    <input
-      type="date"
-      class="col-8"
-      [ngModel]="company.callLast | date: 'yyyy-MM-dd'"
-      (ngModelChange)="company.callLast = $event"
-    />
-  </div>
-  <div class="row px-0">
-    <label for="visitLast" class="col-4">Last Visited : </label>
-    <input
-      type="date"
-      class="col-8"
-      [ngModel]="company.visitLast | date: 'yyyy-MM-dd'"
-      (ngModelChange)="company.visitLast = $event"
-    />
-  </div>
-  <div class="row px-0">
-    <label for="messages" class="col-4">Notes : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.messages" />
-  </div>
-  <div class="row px-0">
-    <label for="discount" class="col-4">Discount : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.discount" />
-  </div>
-  <div class="row px-0">
-    <label for="salesExp" class="col-4">Sales Expected : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.salesExp" />
-  </div>
-  <div class="row px-0">
-    <label for="sales3m" class="col-4">Sales Last 3 Months : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.sales3m" />
-  </div>
-  <div class="row px-0">
-    <label for="salesTotal" class="col-4">Sales Total : </label>
-    <input type="text" class="col-8" [(ngModel)]="company.salesTotal" />
-  </div>
-</div>
-<div class="btn-toolbar row px-0 justify-content-md-center mt-3 mb-5">
-  <button
-    type="button"
-    class="btn btn-success mr-1"
-    (click)="this.newCompany ? createCompany() : updateCompany()"
-  >
-    Save
-  </button>
-  <button type="button" class="btn btn-secondary" (click)="goBack()">
-    Go Back
-  </button>
-</div>
-<div class="col-8 mx-auto">
-  <app-address-details [entity]="this.company"></app-address-details>
-</div>
+</ng-container>
