--- a/src/app/components/admin/user-details/user-details.component.html
+++ b/src/app/components/admin/user-details/user-details.component.html
@@ -1,49 +1,96 @@
-<div *ngIf="this.user && this.roles" class="col-10 mx-auto">
-  <div *ngIf="!this.newUser" class="row px-0">
-    <label for="userId" class="col-4">ID : </label>
-    <p class="col-8">{{ user.userId }}</p>
+<ng-container *ngIf="this.user && this.roles" class="col-10 mx-auto">
+  <div class="form mb-4">
+    <div *ngIf="!this.newUser" class="row px-0">
+      <label for="userId" class="col-4">ID : </label>
+      <div class="col-8 form-control">{{ user.id }}</div>
+    </div>
+    <div class="row px-0">
+      <label for="firstName" class="col-4">Name : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="user.firstName"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="lastName" class="col-4">Surname : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="user.lastName"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="email" class="col-4">Email : </label>
+      <input type="text" class="col-8 form-control" [(ngModel)]="user.email" />
+    </div>
+    <div class="row px-0">
+      <label for="password" class="col-4">Password : </label>
+      <input
+        type="password"
+        class="col-8 form-control"
+        [(ngModel)]="user.password"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="telephone" class="col-4">Telephone : </label>
+      <input
+        type="text"
+        class="col-8 form-control"
+        [(ngModel)]="user.telephone"
+      />
+    </div>
+    <div class="row px-0">
+      <label for="role" class="col-4">Role : </label>
+      <select (change)="user.role = $event.target.value">
+        <option *ngFor="let role of roles" class="form-control" [value]="role">
+          {{ role }}
+        </option>
+      </select>
+    </div>
   </div>
-  <div class="row px-0">
-    <label for="firstName" class="col-4">Name : </label>
-    <input type="text" class="col-8" [(ngModel)]="user.firstName" />
+  <div class="row px-0 justify-content-md-center">
+    <button
+      *ngIf="showAddress == false"
+      type="button"
+      class="btn btn-outline-info mx-auto"
+      (click)="showAddress = true"
+    >
+      {{ this.user?.address ? "Edit Address" : "Add Address" }}
+    </button>
+    <button
+      *ngIf="showCompanies == false"
+      type="button"
+      class="btn btn-outline-info mx-auto"
+      (click)="showCompanies = true"
+    >
+      Manage Companies
+    </button>
   </div>
-  <div class="row px-0">
-    <label for="lastName" class="col-4">Surname : </label>
-    <input type="text" class="col-8" [(ngModel)]="user.lastName" />
+  <div *ngIf="showAddress">
+    <app-address-details
+      class="row px-0"
+      [userOrCompany]="this.user"
+      (showAddress)="receiveAddressMessage($event)"
+    ></app-address-details>
   </div>
-  <div class="row px-0">
-    <label for="email" class="col-4">Email : </label>
-    <input type="text" class="col-8" [(ngModel)]="user.email" />
+  <div *ngIf="showCompanies">
+    <app-user-companies
+      class="row px-0"
+      [user]="this.user"
+      (showCompanies)="receiveCompanyMessage($event)"
+    ></app-user-companies>
   </div>
-  <div class="row px-0">
-    <label for="password" class="col-4">Password : </label>
-    <input type="password" class="col-8" [(ngModel)]="user.password" />
+  <div class="btn-toolbar row px-0 justify-content-md-center my-4">
+    <button
+      type="button"
+      class="btn btn-outline-success mr-1"
+      (click)="this.newUser ? createUser() : updateUser()"
+    >
+      Save
+    </button>
+    <button type="button" class="btn btn-outline-secondary" (click)="goBack()">
+      Go Back
+    </button>
   </div>
-  <div class="row px-0">
-    <label for="telephone" class="col-4">Telephone : </label>
-    <input type="text" class="col-8" [(ngModel)]="user.telephone" />
-  </div>
-  <div class="row px-0">
-    <label for="role" class="col-4">Role : </label>
-    <select (change)="user.role = $event.target.value">
-      <option *ngFor="let role of roles" [value]="role">
-        {{ role }}
-      </option>
-    </select>
-  </div>
-</div>
-<div class="btn-toolbar row px-0 justify-content-md-center my-4">
-  <button
-    type="button"
-    class="btn btn-success mr-1"
-    (click)="this.newUser ? createUser() : updateUser()"
-  >
-    Save
-  </button>
-  <button type="button" class="btn btn-secondary" (click)="goBack()">
-    Go Back
-  </button>
-</div>
-<div class="col-8 mx-auto">
-  <app-address-details [entity]="this.user"></app-address-details>
-</div>
+</ng-container>
